Breathlessness Implementation, Some ResultCalculator improvements